# composefs-rs

./: .bootc-dev-infra-commit.txt  .gitignore  .packit.yaml  AGENTS.md  Cargo.toml  Justfile  Makefile  README.md  ROADMAP.md
.config/: nextest.toml
.github/workflows/: bootc-revdep.yml  build-cfsctl-artifact.yml  ci.yml  mirror-fixture-images.yml  publish.yml  release.yml
bootc/: Justfile
contrib/packaging/: composefs.spec  install-test-deps.sh  lib.sh  pack.sh
crates/cfsctl/: Cargo.toml
crates/cfsctl/src/: lib.rs  main.rs
crates/composefs/: Cargo.toml
crates/composefs-boot/: Cargo.toml
crates/composefs-boot/src/: bootloader.rs  cmdline.rs  design.rs  lib.rs  selabel.rs  uki.rs  write_boot.rs
crates/composefs-capi/: Cargo.toml  build.rs  composefs.pc.in  install.sh
crates/composefs-capi/src/: convert.rs  errno.rs  fsverity.rs  image.rs  lib.rs  mount.rs  node.rs  tests.rs
crates/composefs-capi/tests/: Containerfile.test-capi  test-capi-container.sh  test_lcfs.c
crates/composefs-ctl/: Cargo.toml  cfsctl.bash-completion
crates/composefs-ctl/src/: complete.rs  composefs_info.rs  fuse.rs  lib.rs  main.rs  mkcomposefs.rs  mountcomposefs.rs  oci_run.rs  varlink.rs
crates/composefs-ctl/tests/: test-lib.sh  test-mount-composefs.sh
crates/composefs-fuse/: Cargo.toml
crates/composefs-fuse/src/: lib.rs
crates/composefs-http/: Cargo.toml
crates/composefs-integration-tests/: Cargo.toml
crates/composefs-integration-tests/src/: lib.rs  main.rs
crates/composefs-integration-tests/src/tests/: cli.rs  copy_image.rs  cstor.rs  digest_stability.rs  mod.rs  oci_compat.rs  ostree.rs  privileged.rs  varlink.rs
crates/composefs-ioctls/: Cargo.toml
crates/composefs-ioctls/src/: fsverity.rs  keyring.rs  lib.rs  mount.rs
crates/composefs-oci/: Cargo.toml
crates/composefs-oci/src/: boot.rs  canonical_tar_spec.rs  cstor.rs  delta.rs  design.rs  image.rs  incremental_pulls_spec.rs  layer_sync.rs  layer_transport.rs  lib.rs  oci_image.rs  oci_layout.rs  referrers.rs  sealing_spec.rs  signature.rs  signing.rs  skopeo.rs  splitfdstream.rs  tar.rs  test_util.rs  varlink_types.rs
crates/composefs-ostree/: Cargo.toml
crates/composefs-ostree/src/: commit.rs  delta.rs  design.rs  lib.rs  ostree.rs  pull.rs  repo.rs
crates/composefs-run/: Cargo.toml
crates/composefs-run/src/: main.rs
crates/composefs-setup-root/: Cargo.toml
crates/composefs-setup-root/src/: main.rs
crates/composefs-splitdirfdstream/: Cargo.toml  README.md
crates/composefs-splitdirfdstream/src/: lib.rs  transport.rs
crates/composefs-splitfdstream/src/: lib.rs
crates/composefs-storage/: Cargo.toml
crates/composefs-storage/src/: cstor_service.rs  layer.rs  lib.rs  lock.rs  tar_split.rs  userns_helper.rs
crates/composefs/fuzz/: generate_corpus.rs
crates/composefs/src/: dumpfile.rs  dumpfile_parse.rs  erofs_format.rs  filesystem_ops.rs  fs.rs  generic_tree.rs  lib.rs  mount.rs  mountcompat.rs  progress.rs  repository.rs  repository_format.rs  splitstream.rs  splitstream_format.rs  test.rs  tree.rs  util.rs  varlink.rs
crates/composefs/src/erofs/: composefs.rs  debug.rs  format.rs  reader.rs  writer.rs
crates/composefs/src/fsverity/: digest.rs  hashvalue.rs  ioctl.rs  mod.rs
crates/composefs/tests/: mkfs.rs  special_v1.dump
crates/composefs/tests/snapshots/: mkfs__empty.snap  mkfs__simple.snap
crates/cstorage/: Cargo.toml
crates/cstorage/src/: storage.rs
crates/integration-tests/src/: lib.rs
crates/integration-tests/src/tests/: cli.rs  cstor.rs  privileged.rs
doc/: booting.md  erofs.md  oci.md  ostree.md  repository.md
doc/plans/: incremental-pulls.md  oci-sealing-spec.md
examples/: testthing.py
examples/common/fix-verity/: dracut-hook.sh  fix-verity
examples/uki/: Containerfile  Containerfile.arch  build
examples/uki/extra/usr/lib/initcpio/hooks/: composefs
examples/unified/: Containerfile  build
examples/unified-secureboot/: Containerfile  build
examples/unified-secureboot/extra/usr/lib/dracut/modules.d/37composefs/: composefs-setup-root.service
man/: composefs-dump.md  composefs-info.md  mkcomposefs.md  mount.composefs.md
