[package]
name = "composefs-ctl"
description = "Command-line utility for composefs"

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "cfsctl"
path = "src/main.rs"

[features]
default = ['pre-6.15', 'pre-6.16', 'oci', 'containers-storage', 'ostree', 'fuse']
http = ['composefs-http']
oci = ['composefs-oci', 'composefs-oci/varlink', 'composefs-splitdirfdstream']
containers-storage = ['composefs-oci/containers-storage', 'cstorage']
ostree = ['composefs-ostree']
fuse = ['dep:composefs-fuse']
rhel9 = ['composefs/rhel9']
'pre-6.15' = ['composefs/pre-6.15']
'pre-6.16' = ['composefs-fuse?/pre-6.16']

[dependencies]
anyhow = { version = "1.0.87", default-features = false }
fn-error-context = "0.2"
clap = { version = "4.5.0", default-features = false, features = ["std", "help", "usage", "derive", "wrap_help"] }
clap_complete = { version = "4.5.0", default-features = false, features = ["unstable-dynamic"] }
comfy-table = { version = "7.1", default-features = false }
composefs = { workspace = true, features = ["varlink"] }
composefs-boot = { workspace = true }
composefs-oci = { workspace = true, optional = true, features = ["boot"] }
composefs-splitdirfdstream = { path = "../composefs-splitdirfdstream", version = "0.7.0", optional = true }
composefs-http = { workspace = true, optional = true }
cstorage = { package = "composefs-storage", path = "../composefs-storage", version = "0.7.0", features = ["layer-transfer"], optional = true }
cap-std-ext = { workspace = true }
composefs-fuse = { workspace = true, optional = true }
composefs-ostree = { workspace = true, optional = true }
env_logger = { version = "0.11.0", default-features = false }
hex = { version = "0.4.0", default-features = false }
indicatif = { version = "0.18.0", default-features = false }
libsystemd = { version = "0.7" }
log = { version = "0.4", default-features = false }
rustix = { version = "1.0.0", default-features = false, features = ["fs", "net", "pipe", "process", "thread"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.24.2", default-features = false, features = ["io-std", "io-util", "net", "rt", "rt-multi-thread", "sync"] }
zlink = { workspace = true }

[dev-dependencies]
similar-asserts = "1.7.0"
tar = { version = "0.4.38", default-features = false }
tempfile = "3.8.0"
tokio = { version = "1.24.2", default-features = false, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
