[package]
name = "composefs-ostree"
description = "ostree support for composefs"
keywords = ["composefs", "ostree"]

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { version = "1.0.87", default-features = false }
bsdiff = { version = "0.2.1", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
composefs = { workspace = true }
configparser = { version = "3.1.0", features = [] }
flate2 = { version = "1.1.2", default-features = true }
gvariant = { version = "0.5.1", default-features = true}
hex = { version = "0.4.0", default-features = false, features = ["std"] }
rustix = { version = "1.0.0", default-features = false, features = ["fs", "mount", "process", "std"] }
sha2 = { version = "0.11.0", default-features = false }
zerocopy = { version = "0.8.0", default-features = false, features = ["derive", "std"] }
reqwest = { version = "0.12.15", features = ["stream", "zstd"] }
tokio = { version = "1.24.2", default-features = false, features = ["rt", "sync"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7", default-features = false, features = ["io", "io-util"] }
xz2 = { version = "0.1.7", default-features = false }

[dev-dependencies]
similar-asserts = "1.7.0"

[lints]
workspace = true
