[package]
name = "composefs-run"
description = "Minimal container runner using composefs and crun"
publish = false

edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "derive"] }
composefs = { workspace = true }
composefs-oci = { workspace = true }
oci-spec = { version = "0.9", default-features = false, features = ["runtime"] }
libc = { version = "0.2", default-features = false }
rustix = { version = "1.0.0", default-features = false, features = ["fs", "process", "mount"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
